--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "search"
   ],
   "author": "gjc9620",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/gjc9620/baiduMap-drag-positioning/issues"
   },
